# vibe-coding-experiments

./: README.md  ai_hey_ai.py  hey_ai.py  requirements.txt
logs/: mcp_sse.pcapng
logs/hey_ai/prompts/: prompt01.txt  prompt02.txt  prompt03.txt  prompt05.txt  prompt07.txt  prompt08.txt  prompt09.txt  prompt11.txt  prompt12.txt
logs/hey_ai/responses/: attempt01.py  attempt02.py  attempt03.py  attempt04.py  attempt05.py  attempt06.py  attempt07-fixed.py  attempt07.py  attempt08.py  attempt09.py  attempt10.py  debugging_connection_error02.txt
logs/package/prompts/: prompt01.txt  prompt02.txt  prompt03.txt
logs/package/responses/: attempt01.txt  attempt02.txt  attempt03.txt
mistral_cli_tool/: pyproject.toml
mistral_cli_tool/src/: main.py
mistral_cli_tool/src/mistral_cli_tool/: __init__.py  ai_client.py  main.py  mcp_server.py
prompts/: prompt04.txt  prompt10.txt
pyvo_vibing/: snake.py  todo_app.py  todos.db
pyvo_vibing/templates/: index.html  login.html  register.html
responses/: attempt04.py  attempt05.py  attempt07-fixed.py  attempt07.py  attempt08.py  attempt09.py  debugging_connection_error01.txt
